<resources>
  <string name="action_share" comment="Menu action to send text content to another app">Share</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_sidebar">Show sidebar menu</string>
  <string name="action_web" comment="Menu action to open Keyman browser">Web Browser</string>
  <string name="keyboards_and_languages_title" comment="Section title for Keyboards_and_Languages">Keyboards and Languages</string>
  <string name="preferences_title" comment="Section title for Sidebar">Preferences</string>
  <string name="help_title" comment="Section title for Sidebar">Help</string>
  <string name="drawer_subtitle_spacebar_caption" comment="Subtitle for Spacebar caption drawer item">Show keyboard name on spacebar</string>
  <string name="drawer_subtitle_show_osk" comment="Subtitle for Show On Screen Keyboard drawer item">When physical keyboard connected</string>
  <string name="drawer_subtitle_send_crash_report" comment="Subtitle for crash reporting drawer item">Allow error reports to be sent to Keyman team</string>
  <string name="drawer_subtitle_about" comment="Subtitle for About drawer item">Learn how to use Keyman</string>
  <string name="drawer_subtitle_about_current_keyboard" comment="Subtitle for current keyboard About drawer item">No active keyboard</string>
  <string name="drawer_about_current_keyboard" comment="Title for current keyboard About drawer item">About active keyboard</string>
  <string name="drawer_about_no_active_keyboard" comment="Fallback text when no active keyboard is selected">No active keyboard</string>
  <string name="drawer_subtitle_theme" comment="Subtitle format for current theme setting">Current setting: %1$s</string>
  <string name="drawer_subtitle_active_keyboard_help" comment="Subtitle for active keyboard help drawer item">Learn how to use the %1$s </string>
  <string name="drawer_title_active_keyboard_help" comment="Title for active keyboard help drawer item">%1$s help</string>
  <string name="drawer_title_active_keyboard_help_fallback" comment="Fallback title for active keyboard help drawer item">Active keyboard help</string>
  <string name="action_text_size" comment="Menu action to adjust text size">Text Size</string>
  <string name="action_overflow" comment="Show additional menu items">More</string>
  <string name="action_clear_text" comment="Menu action to erase text">Clear Text</string>
  <string name="action_info" comment="Menu action to display Keyman help page">Info</string>
  <string name="action_settings" comment="Menu action to open Settings menu">Settings</string>
  <string name="action_install_updates" comment="Menu notification that keyboard or dictionary updates available">Install Updates</string>
  <string name="title_version" comment="Title of Keyman for Android version">Version: %1$s</string>
  <string name="text_require_chrome_57" comment="Banner text when old version of Chrome is installed">
    Keyman requires Chrome version 57 or newer.</string>
  <string name="text_require_chrome_version" comment="Banner text when old version of Chrome is installed">
    Keyman requires Chrome version %1$s or newer.</string>
  <string name="button_update_chrome" comment="Prompt to upgrade Chrome in the Play Store">Update Chrome</string>
  <string name="textview_hint" comment="Prompt to start typing">Start typing here&#8230;</string>
  <string name="splash_blank" translatable="false" comment="Blank text while version info on splash page is disabled"></string>
  <string name="splash_copyright" translatable="false" comment="Placeholder for copyright text while version info on splash page is disabled">Copyright &#169; 1992-</string>
  <string name="text_size" comment="Current text size (number)">Text Size: %1$d</string>
  <string name="ic_text_size_up" comment="Make text bigger">Text size up</string>
  <string name="ic_text_size_down" comment="Make text smaller">Text size down</string>
  <string name="ic_text_size_slider" comment="Adjust text size">Text size slider</string>
  <string name="all_text_will_be_cleared" comment="Erase all the text">\nAll text will be cleared\n</string>
  <string name="get_started" comment="Menu for getting started">Get Started</string>
  <string name="add_a_keyboard" comment="Menu item to add a keyboard">Add a keyboard for your language</string>
  <string name="system_keyboards" comment="Menu item to open system keyboards">System keyboards</string>
  <string name="enable_system_keyboard" comment="Menu item to enable Keyman as system keyboard">Enable Keyman as system-wide keyboard</string>
  <string name="set_keyman_as_default" comment="Menu item to set Keyman as default system keyboard">Set Keyman as default keyboard</string>
  <string name="more_info" comment="Open the Keyman for Android help page">More info</string>
  <string name="show_get_started" comment="Show the &quot;Get Started&quot; menu on startup">Show \"%1$s\" on startup</string>
  <string name="request_storage_permission" comment="Request storage permission to access keyboard packages">
    To install keyboard packages, allow Keyman permission to read external storage.</string>
  <string name="storage_permission_denied" comment="Keyboard package installation may fail since Android storage permission not granted">
    Storage permission request was denied. May fail to install keyboard package</string>
  <string name="storage_permission_denied2" comment="Keyboard package installation failed. Recommend install from local file">
    Storage permission request failed. Try Keyman Settings - Install from local file</string>
  <string name="keyman_settings" comment="Settings menu title">Settings</string>
  <plurals name="installed_languages">
    <item quantity="one">Installed languages (%1$d)</item>
    <item quantity="other">Installed languages (%1$d)</item>
  </plurals>
  <string name="install_keyboard_or_dictionary" comment="Menu item to install keyboard or dictionary">Install keyboard or dictionary</string>
  <string name="change_display_language" comment="Menu action to change interface language">Display language</string>
  <string name="adjust_keyboard_height" comment="Menu action to adjust keyboard height">Adjust keyboard height</string>
  <string name="adjust_longpress_delay" comment="Menu action to adjust longpress delay duration">Adjust longpress delay</string>
  <string name="spacebar_caption" comment="Menu action to set the spacebar caption">Spacebar caption</string>
  <string name="spacebar_caption_keyboard" comment="Spacebar caption option - keyboard">Keyboard</string>
  <string name="spacebar_caption_language" comment="Spacebar caption option - language">Language</string>
  <string name="spacebar_caption_language_keyboard" comment="Spacebar caption option - language + keyboard">Language + Keyboard</string>
  <string name="spacebar_caption_blank" comment="Spacebar caption option - blank">Blank</string>
  <string name="spacebar_caption_hint_keyboard" comment="Spacebar caption hint - keyboard">Show keyboard name on spacebar</string>
  <string name="spacebar_caption_hint_language" comment="Spacebar caption hint - language">Show language name on spacebar</string>
  <string name="spacebar_caption_hint_language_keyboard" comment="Spacebar caption hint - language + keyboard">Language and keyboard on spacebar</string>
  <string name="spacebar_caption_hint_blank" comment="Spacebar caption hint - blank">Do not show caption on spacebar</string>
  <string name="show_osk" comment="show OSK when physical keyboard is connected">Show on-screen keyboard</string>
  <string name="show_osk_hint" comment="When physical keyboard is connected">When physical keyboard is connected</string>
  <string name="haptic_feedback" comment="haptic feedback on key press">Vibrate when typing</string>
  <string name="show_banner" comment="text suggestions banner">Always show banner</string>
  <string name="show_banner_on" comment="Description when toggle is on">To be implemented</string>
  <string name="show_banner_off" comment="Description when toggle is off">When off, only shown when predictive text is enabled</string>
  <string name="show_send_crash_report" comment="permission for sending crash reports">Automatic error reporting</string>
  <string name="show_send_crash_report_on" comment="Description when toggle is on">Allow error reports to be sent to Keyman team</string>
  <string name="show_send_crash_report_off" comment="Description when toggle is off">Error reports are not sent to Keyman team</string>
  <string name="drawer_menu_help" comment="Help drawer item title">User guide</string>
  <string name="drawer_menu_update_keyboards" comment="Drawer action to update installed keyboards">Update keyboards</string>
  <string name="drawer_menu_installed_languages" comment="Drawer title for installed languages item">Installed languages</string>
  <string name="drawer_menu_show_get_started" comment="Drawer title for get started startup option">Show &quot;Get Started&quot; on startup</string>
  <string name="theme" comment="Menu title for theme settings">Theme</string>
  <string name="theme_choose" comment="Dialog title for choosing app theme">Choose theme</string>
  <string name="theme_dark_mode" comment="Theme option">Dark mode</string>
  <string name="theme_light_mode" comment="Theme option">Light mode</string>
  <string name="theme_system_default" comment="Theme option">System default</string>
  <string name="install_from_keyman_dot_com" comment="Install package from Keyman server">Install from keyman.com</string>
  <string name="install_from_local_file" comment="Install package file from local device">Install from local file</string>
  <string name="install_from_other_device" comment="Scan QR Code">Install from other device</string>
  <string name="add_languages_to_installed_keyboard" comment="Install additional languages from a keyboard package">Add languages to installed keyboard</string>
  <string name="add_language_subtext" comment="Additional information for adding another language">(from keyboard package)</string>
  <string name="title_select_keyboard_package_list" comment="Select a keyboard package to add languages">Select Keyboard Package</string>
  <string name="title_select_languages_for_package" comment="Select language names from the keyboard package">Select languages for %1$s</string>
  <string name="added_language_to_keyboard" comment="Notification that a language name is added to a keyboard">Added language %1$s to %2$s</string>
  <string name="all_languages_installed" comment="Text when all languages from a keyboard package have been installed">All languages already installed</string>
  <string name="adjust_keyboard_instructions" comment="Instructions for adjusting keyboard height">Drag the keyboard to resize the height. Rotate the device to adjust portrait and landscape.</string>
  <string name="reset_to_defaults" comment="Button to reset to default heights">Reset to Defaults</string>
  <string name="keyboard_height_format" comment="Format for displaying keyboard height percentages">%1$d%% Portrait | %2$d%% Landscape</string>
  <string name="longpress_delay_time" comment="Current longpress delay time (seconds)">Delay Time: %1$.1f seconds</string>
  <string name="ic_delay_time_up" comment="Make longpress delay longer">Delay time longer</string>
  <string name="ic_delay_time_down" comment="Make longpress delay shorter">Delay time shorter</string>
  <string name="ic_longpress_delay_slider" comment="Adjust longpress delay time">Longpress delay time slider</string>
  <string name="hint_text" comment="Prompt to type in the browser search bar">Search or type URL</string>
  <string name="title_bookmarks" comment="Title for bookmarks">Bookmarks</string>
  <string name="no_bookmarks" comment="Text when bookmark list is empty">No Bookmarks</string>
  <string name="add_bookmark" comment="Confirmation to add bookmark">Add Bookmark</string>
</resources>