<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingBottom="25dp"
    android:paddingTop="25dp" >

    <ImageButton
        android:id="@+id/textSizeDownButton"
        style="?android:attr/actionButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/ic_text_size_down"
        android:src="@drawable/textsize_decrease" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ic_text_size_slider"
        android:layout_gravity="center" />

    <ImageButton
        android:id="@+id/textSizeUpButton"
        style="?android:attr/actionButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/ic_text_size_up"
        android:src="@drawable/textsize_increase" />

</LinearLayout>
